# drop-allocator

./: .gitignore  Makefile  README.md  REORGANIZATION_SUMMARY.md  Summary.md  allocator.py  allocator_cov.py  allocator_v0.py  analyze_capacity.py  config.yaml  contract_caps_2121.csv  current.md  cursor_discussing_allocation_and_sponso.md  drop_assignments_2121.csv  elig_pairs_2121_top30_strat.csv.REMOVED.git-id  elig_pairs_2121_top30_strat_v2.csv.REMOVED.git-id  linear.md  past_conversation.txt  pyproject.toml  temp_contract_caps.csv
..bfg-report/2025-08-11/17-00-20/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
clickhouse/: elig_pairs_top20.sql
data/: clean_contract_caps.csv  elig_pairs_2121_top20.csv.REMOVED.git-id
docs/: API.md  DEVELOPMENT.md
postgres/: contract_caps_2121.sql
production_ready/: CLEANUP_SUMMARY.md  DEPLOYMENT.md  LOGGING_UPDATE.md  PRODUCTION_READY.md  README.md  requirements.txt  setup.py
production_ready/sql/: contract_caps_2122_v3.sql
production_ready/src/allocator/: main.py
production_ready/src/utils/: __init__.py  budget.py  debug.py  diagnostic.py  report.py  validate.py
sql/clickhouse/: command.txt  elig_pairs_2121.csv.REMOVED.git-id  elig_pairs_2122_include_zeros.sql  elig_pairs_2122_targeted_expansion.sql  elig_pairs_2122_top60_strat.sql  elig_pairs_top30_strat.sql  elig_pairs_top60_strat.sql
sql/postgres/: contract_caps_2121.sql  contract_caps_2121_v2.sql  contract_caps_2122_v2.sql  contract_caps_2122_v3.sql  contract_caps_2122_v3_boosted.sql  group_ratios_2121.sql  group_ratios_2122.sql  user_groups_2121.sql  user_groups_2122.sql
src/: __init__.py
src/allocator/: __init__.py  coverage.py  find_underutilized_sponsored_contracts.py  legacy.py  main.py  main_backup.py
src/utils/: debug.py  report.py
tests/: test_allocator.py
venv311/: pyvenv.cfg
